Fix collapse last header border bottom again!

--- a/src/collapse.css
+++ b/src/collapse.css
@@ -57,6 +57,9 @@
       .el-collapse-item__header {
         border-bottom: 0;
       }
+      .el-collapse-item__wrap {
+        border-bottom: 0;
+      }
     }
   }
 }
